force-app/main/default/objects/NPSConfig__c/NPSConfig__c.object-meta.xml
<CustomObject>
    <label>NPSConfig</label>
    <nameField>
        <displayFormat>NPS-{0000}</displayFormat>
        <label>NPSConfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>