force-app/main/default/objects/NPSConfig__c/fields/Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue__c</fullName>
    <label>Case Queue</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>