force-app/main/default/objects/NPSConfig__c/fields/Email_Notification_List__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_List__c</fullName>
    <description>Comma separated email ids</description>
    <inlineHelpText>Comma separated email ids</inlineHelpText>
    <label>Email Notification List</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>