force-app/main/default/objects/NPSConfig__c/fields/Notify_CSM_and_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_CSM_and_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify CSM and Owner</label>
    <type>Checkbox</type>
</CustomField>