force-app/main/default/objects/NPSConfig__c/fields/Preference_Order__c.field-meta.xml
<CustomField>
    <fullName>Preference_Order__c</fullName>
    <label>Preference Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>