force-app/main/default/objects/NPSConfig__c/fields/Trigger_Words__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Words__c</fullName>
    <description>Comma separated trigger words</description>
    <inlineHelpText>Comma separated trigger words</inlineHelpText>
    <label>Trigger_Words</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>