force-app/main/default/objects/NPSConfig__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing/AR</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Sales/SalesOps</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>Field CSM</fullName>
                <isActive>false</isActive>
                <label>Field CSM</label>
            </value>
            <value>
                <fullName>Inside CSM</fullName>
                <isActive>false</isActive>
                <label>Inside CSM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>