force-app/main/default/objects/NPSConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Queue__c</columns>
    <columns>Type__c</columns>
    <columns>Trigger_Words__c</columns>
    <columns>Email_Notification_List__c</columns>
    <columns>Region__c</columns>
    <columns>Notify_CSM_and_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>